--- a/src/content/docs/reference/Example Proyects/buzzerExample.mdx
+++ b/src/content/docs/reference/Example Proyects/buzzerExample.mdx
@@ -105,18 +105,6 @@ static void Buzzer_Init(void)
     PWMClockSet(PWM0_BASE, PWM_SYSCLK_DIV_64);
 }
 
-void Timer1A_Handler(void)
-{
-    // Clear interrupt flag
-    TimerIntClear(TIMER1_BASE, TIMER_TIMA_TIMEOUT);
-
-    // Disable PWM output
-    PWMOutputState(BUZZER_PWM_BASE, BUZZER_OUTBIT, false);
-
-    // Stop Timer1A
-    TimerDisable(TIMER1_BASE, TIMER_A);
-}
-
 void Buzzer_Beep(uint32_t freq_hz, uint32_t duration_ms)
 {
     if (freq_hz == 0) return;
@@ -124,33 +112,17 @@ void Buzzer_Beep(uint32_t freq_hz, uint32_t duration_ms)
     uint32_t pwmClock = gSysClk / 64;
     uint32_t period = pwmClock / freq_hz;
 
-    // Configure PWM output (PF1 → M0PWM1)
-    PWMGenConfigure(BUZZER_PWM_BASE, BUZZER_GEN,
-                    PWM_GEN_MODE_DOWN | PWM_GEN_MODE_NO_SYNC);
+    PWMGenConfigure(BUZZER_PWM_BASE, BUZZER_GEN, PWM_GEN_MODE_DOWN);
     PWMGenPeriodSet(BUZZER_PWM_BASE, BUZZER_GEN, period);
     PWMPulseWidthSet(BUZZER_PWM_BASE, BUZZER_OUTNUM, period / 2);
     PWMOutputState(BUZZER_PWM_BASE, BUZZER_OUTBIT, true);
     PWMGenEnable(BUZZER_PWM_BASE, BUZZER_GEN);
 
-    // Enable Timer1 peripheral
-    SysCtlPeripheralEnable(SYSCTL_PERIPH_TIMER1);
-    while(!SysCtlPeripheralReady(SYSCTL_PERIPH_TIMER1));
+    SysCtlDelay((gSysClk / 3 / 1000) * duration_ms);
 
-    // Configure Timer1A as one-shot
-    TimerDisable(TIMER1_BASE, TIMER_A);
-    TimerConfigure(TIMER1_BASE, TIMER_CFG_ONE_SHOT);
-    TimerLoadSet(TIMER1_BASE, TIMER_A, (gSysClk / 1000) * duration_ms);
-
-    // Register ISR and enable interrupt
-    IntDisable(INT_TIMER1A);
-    IntRegister(INT_TIMER1A, Timer1A_Handler);
-    TimerIntClear(TIMER1_BASE, TIMER_TIMA_TIMEOUT);
-    TimerIntEnable(TIMER1_BASE, TIMER_TIMA_TIMEOUT);
-    IntEnable(INT_TIMER1A);
-
-    // Start timer
-    TimerEnable(TIMER1_BASE, TIMER_A);
+    PWMOutputState(BUZZER_PWM_BASE, BUZZER_OUTBIT, false);
 }
+
 // ============================================================================
 // Button Callbacks
 // ============================================================================
