--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,8 +4,8 @@ description: Laboratory Guide for Real-Time Embedded Systems using TI
   EK-TM4C1294XL and BoosterXL-EDUMKII
 template: splash
 hero:
-  tagline: Master real-time programming, RTOS development, and embedded system
-    design through hands-on laboratory experiences
+  tagline: Learn real-time programming, FreeRTOS concepts, and embedded system
+    design through hands-on labs using the TI EK-TM4C1294XL and BOOSTXL-EDUMKII
   actions:
     - text: Lab Summary
       link: /guides/labtimeline/
@@ -75,7 +75,7 @@ import freertos from '../../assets/freertos.png';
 </CardGrid>
 
 <Aside type="tip" title="What is an RTOS?">
-Real-time operating systems are used when software must respond to events quickly and predictably — for example, in robots, vehicles, and control systems. In this course, you’ll learn how an RTOS manages tasks, timing, and communication so that embedded programs run reliably in real-world applications.
+Real-time operating systems let embedded programs run multiple tasks with predictable timing and low latency. In these labs you’ll use FreeRTOS on the TI EK-TM4C1294XL to manage tasks, timers, and inter-task communication while building real hardware projects with sensors, ADC, and PWM.
 </Aside>
 
 ## Course Overview
