--- a/src/content/docs/labs/lab2.mdx
+++ b/src/content/docs/labs/lab2.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Lab 1 — Sensor Hub"
-description: "Learn how to add sound feedback, navigate between screens, and organize modular code."
+title: "Lab 2 — Spectrum Analizer"
+description: "Implement a real-time FFT audio analyzer and visualize frequency bands on the LCD."
 ---
 import { Picture } from 'astro:assets';
 import { Aside } from '@astrojs/starlight/components';
