add warning to Lux screen

--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -457,6 +457,9 @@ void ScreenMic_Draw(void)
 Now that your code is modular, you will give meaning to each screen.
 
 ### Screen 1 — Ambient Light (LUX)
+<Aside type="warning">
+"This part is not required for lab submission"
+</Aside>
 
 * Initialize and read data from the **OPT3001** light sensor.
 * Convert the lux reading to a percentage of a defined maximum (e.g. 1000 lx).
