--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -457,9 +457,11 @@ void ScreenMic_Draw(void)
 Now that your code is modular, you will give meaning to each screen.
 
 ### Screen 1 — Ambient Light (LUX)
-<Aside type="warning">
-"This part is not required for lab submission"
+
+<Aside type="danger" title="Attention">
+This part is **not required for lab submission**, as some development boards may have issues with the sensor. You can skip this section.
 </Aside>
+
 
 * Initialize and read data from the **OPT3001** light sensor.
 * Convert the lux reading to a percentage of a defined maximum (e.g. 1000 lx).
