Lux sensor  attention

--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -459,8 +459,9 @@ Now that your code is modular, you will give meaning to each screen.
 ### Screen 1 — Ambient Light (LUX)
 
 <Aside type="danger" title="Attention">
-This part is **not required for lab submission**, as some development boards may have issues with the sensor. You can skip this section.
+**Screen 1 — Ambient Light (LUX)** is **not required for lab submission**, as some development boards may have issues with the light sensor (OPT3001).
 </Aside>
+
 
 
 * Initialize and read data from the **OPT3001** light sensor.
