mic level changed to logaritmic

--- a/src/content/docs/reference/Tivaware/mic_adc.mdx
+++ b/src/content/docs/reference/Tivaware/mic_adc.mdx
@@ -72,9 +72,13 @@ The microphone output fluctuates around a DC midpoint (~0.5 V).
 To measure **loudness**, we take multiple samples, remove the DC offset, and compute the **RMS value**:
 
 ```c
-float Mic_Level(void)
+#include <math.h>
+#include <stdint.h>
+
+float Mic_Level_dB(void)
 {
-    const int N = 128;   // number of samples
+    const int N = 128;        // number of samples
+    const float REF = 0.5f;   // reference RMS (max amplitude)
     float sum = 0.0f;
 
     for (int i = 0; i < N; i++) {
@@ -84,10 +88,15 @@ float Mic_Level(void)
         sum += ac * ac;                   // accumulate squared amplitude
     }
 
-    float rms = sqrtf(sum / N);           // root mean square
-    return rms;                           // 0.0 (silent) → ~0.5 (loud)
+    float rms = sqrtf(sum / N);
+    float db = 20.0f * log10f(rms / REF);
+
+    // Avoid -inf for silence
+    if (rms < 1e-6f)
+        db = -80.0f;  // minimum floor
+
+    return db;  // dB value: roughly -80 (silence) to 0 (max)
 }
-```
 
 ---
 
