image zoom plugin added

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -105,7 +105,7 @@ Real-time operating systems let embedded programs run multiple tasks with predic
 
 <CardGrid>
   <Card title="TI EK-TM4C1294XL LaunchPad" icon="laptop">
-    <Picture src={tiBoard} alt="TI EK-TM4C1294XL" width={300} />
+    <Picture src={tiBoard} alt="TI EK-TM4C1294XL" width={300} data-zoom-off/>
     
     **ARM Cortex-M4F Microcontroller**
     - 120MHz with hardware floating-point unit
@@ -117,7 +117,7 @@ Real-time operating systems let embedded programs run multiple tasks with predic
   </Card>
   
   <Card title="BOOSTXL-EDUMKII BoosterPack" icon="puzzle">
-    <Picture src={boosterPack} alt="Educational BoosterPack" width={300} />
+    <Picture src={boosterPack} alt="Educational BoosterPack" width={300} data-zoom-off />
     
     **Complete I/O Interface Module**
     - 128×128 color LCD display
