agrega enlaces de navegación a Lab 2 en la sección de metadatos

--- a/src/content/docs/labs/lab2.mdx
+++ b/src/content/docs/labs/lab2.mdx
@@ -1,6 +1,10 @@
 ---
 title: "Lab 2 — Spectrum Analizer"
 description: "Implement a real-time FFT audio analyzer and visualize frequency bands on the LCD."
+links:
+  - "/labs/lab1/"
+  - "/guides/setupguide/"
+  - "/guides/labtimeline/"
 ---
 import { Picture } from 'astro:assets';
 import { Aside } from '@astrojs/starlight/components';
@@ -37,5 +41,4 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
       icon="right-arrow"
    />
 </CardGrid>
-
 ---
