ajusta la configuración de starlightSiteGraph, agrega enlaces de navegación a las guías y laboratorios, y elimina ejemplos de proyectos obsoletos

--- a/src/content/docs/guides/labTimeline.mdx
+++ b/src/content/docs/guides/labTimeline.mdx
@@ -1,6 +1,13 @@
 ---
 title: "Lab Timeline & Summaries"
 description: "Timeline, due dates, and summaries for all ECE3849 labs."
+links:
+- /labs/lab0/
+- /labs/lab1/
+- /labs/lab2/
+- /labs/lab3/
+- /labs/lab4/
+- /labs/lab5/
 ---
 
 import {
