--- a/src/content/docs/guides/setupGuide.mdx
+++ b/src/content/docs/guides/setupGuide.mdx
@@ -1,6 +1,13 @@
 ---
 title: "Lab Setup Quick Start Guide"
 description: "Start here! Links to all setup steps and guides for your lab environment."
+links:
+- /guides/installccs/
+- /guides/enviromentsetup/
+- /guides/openworkspace/
+- /guides/labkit/
+- /guides/external_libraries/
+- /guides/programmingstyle/
 ---
 
 import {
