--- a/src/content/docs/labs/lab0.mdx
+++ b/src/content/docs/labs/lab0.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Lab 0: Tutorial, Button Handling, Stopwatch"
 description: Introductory tutorial to embedded system platform and development environment
+links:
+- /guides/setupguide/
+- /guides/labtimeline/
 ---
 
 import { Aside } from '@astrojs/starlight/components';
