--- a/src/content/docs/labs/lab1.mdx
+++ b/src/content/docs/labs/lab1.mdx
@@ -1,6 +1,13 @@
 ---
 title: "Lab 1 — Sensor Hub"
 description: "Learn how to add sound feedback, navigate between screens, and organize modular code."
+links:
+- /labs/lab0/
+- /guides/labtimeline/
+- /guides/setupguide/
+- /reference/tivaware/pwmsignals/
+- /reference/libraries/otp3001/
+- /reference/tivaware/mic_adc/
 ---
 import { Picture } from 'astro:assets';
 import { Aside } from '@astrojs/starlight/components';
