--- a/src/content/docs/reference/Example Projects/blinkExample.mdx
+++ b/src/content/docs/reference/Example Projects/blinkExample.mdx
@@ -1,6 +1,9 @@
 ---
 title: "Buttons Callback Example"
 description: "Guide explaining how the button callbacks example works: registering callbacks, configuring timing, and integrating the tick loop."
+links:
+- /guides/openworkspace/
+
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
 
