--- a/src/content/docs/reference/Example Projects/buzzerExample.mdx
+++ b/src/content/docs/reference/Example Projects/buzzerExample.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Button with audio feedback"
 description: "Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons."
+links:
+- /guides/openworkspace/
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
 
