--- a/src/content/docs/reference/Libraries/ButtonsDriver.mdx
+++ b/src/content/docs/reference/Libraries/ButtonsDriver.mdx
@@ -2,6 +2,14 @@
 
 title: Button Driver
 description: Reference documentation for the Button driver class used in TM4C1294XL projects.
+links:
+- example_projects/buzzerexample/
+- example_projects/blinkexample/
+- labs/lab0/
+- labs/lab1/
+- labs/lab2/
+tags:
+- libraries
 ---
 
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
@@ -167,8 +175,8 @@ Creates a button object and sets up timing thresholds in logical ticks (~20 ms e
 ## Example projects
 You can find a complete example project implementing this functionality
 <CardGrid>
-  <LinkCard href="/reference/example-proyects/buzzerexample/" title="Button with audio feedback" description="Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons." /> 
-  <LinkCard href="/reference/example-proyects/blinkexample/" title="Button Blink Machine" description="Example code for blinking an LED in response to button presses." /> 
+  <LinkCard href="/reference/example-projects/buzzerexample/" title="Button with audio feedback" description="Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons." /> 
+  <LinkCard href="/reference/example-projects/blinkexample/" title="Button Blink Machine" description="Example code for blinking an LED in response to button presses." /> 
 </CardGrid>
 ## Summary
 
