--- a/src/content/docs/reference/Libraries/OTP3001.mdx
+++ b/src/content/docs/reference/Libraries/OTP3001.mdx
@@ -2,6 +2,11 @@
 
 title: OPT3001 
 description: Reference and example for using the OPT3001 I²C light sensor with TM4C1294XL.
+links:
+- labs/lab1/
+- labs/lab2/
+tags:
+- libraries
 ---
 
 import { Code, Badge, LinkCard } from '@astrojs/starlight/components';
