--- a/src/content/docs/reference/Libraries/TimerLib.mdx
+++ b/src/content/docs/reference/Libraries/TimerLib.mdx
@@ -1,7 +1,12 @@
 ---
-
 title: TimerLib
 description: Reference documentation for the Timer class used in TM4C1294XL projects.
+links:
+- labs/lab0/
+- labs/lab1/
+- labs/lab2/
+tags:
+- libraries
 ---
 
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
