--- a/src/content/docs/reference/Libraries/elapsedTime.mdx
+++ b/src/content/docs/reference/Libraries/elapsedTime.mdx
@@ -1,6 +1,12 @@
 ---
 title: elapsedTime
 description: Reference documentation for the elapsedMicros, elapsedMillis, and elapsedSeconds classes.
+links:
+- labs/lab0/
+- labs/lab1/
+- labs/lab2/
+tags:
+- libraries
 ---
 
 import { Highlight, Badge, Icon, CardGrid, Card, LinkCard, Steps } from '@astrojs/starlight/components';
