--- a/src/content/docs/reference/Libraries/joystickDriver.mdx
+++ b/src/content/docs/reference/Libraries/joystickDriver.mdx
@@ -2,6 +2,11 @@
 
 title: Joystick Driver 
 description: Reference and usage guide for the analog joystick on the BOOSTXL‑EDUMKII with TM4C1294XL LaunchPad.
+links:
+- labs/lab1/
+- labs/lab2/
+tags:
+- libraries
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
 
