--- a/src/content/docs/reference/Tivaware/mic_adc.mdx
+++ b/src/content/docs/reference/Tivaware/mic_adc.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Reading the Microphone Signal"
 description: "How to configure and read the microphone using ADC0 on TM4C1294XL."
+tags:
+- reference
 ---
 
 import { Aside, Steps, Card, CardGrid, LinkCard, Icon } from '@astrojs/starlight/components';
