--- a/src/content/docs/reference/Tivaware/multipleScreens.mdx
+++ b/src/content/docs/reference/Tivaware/multipleScreens.mdx
@@ -2,6 +2,16 @@
 
 title: Multi-Screen Interface Tutorial
 description: How to implement multiple graphical screens with navigation buttons on the TM4C1294XL using the Crystalfontz 128x128 LCD and GRLIB.
+links:
+- /reference/libraries/buttonsdriver/
+- /reference/libraries/opt3001/
+- /reference/libraries/joystickdriver/
+- /reference/libraries/elapsedtime/
+- /reference/libraries/timerlib/
+
+tags:
+- reference
+
 ---
 
 import { Badge, Icon, CardGrid, Card, LinkCard, Steps } from '@astrojs/starlight/components';
