--- a/src/content/docs/reference/Tivaware/pwmSignals.mdx
+++ b/src/content/docs/reference/Tivaware/pwmSignals.mdx
@@ -1,6 +1,14 @@
 ---
 title: PWM Buzzer
 description: How to generate sound using PWM on the TM4C1294XL LaunchPad and play tones when pressing or releasing buttons.
+links:
+- /reference/libraries/buttonsdriver/
+- /reference/libraries/elapsedtime/
+- /reference/libraries/timerlib/
+- /reference/example-projects/buzzerexample/
+
+tags:
+- reference
 ---
 import { Badge, Icon, CardGrid, Card, LinkCard } from '@astrojs/starlight/components';
 
@@ -161,7 +169,7 @@ You should hear two distinct tones as you interact with the button. The PWM auto
 ## Example projects
 You can find a complete example project implementing this functionality
 <CardGrid>
-  <LinkCard href="/reference/example-proyects/buzzerexample/" title="Button with audio feedback" description="Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons." /> 
+  <LinkCard href="/reference/example-projects/buzzerexample/" title="Button with audio feedback" description="Example code for generating tones with PWM on the TM4C1294XL LaunchPad when pressing and releasing buttons." /> 
 </CardGrid>
 ## Summary
 
