Add FreeRTOS fundamentals and project setup guides
- Created a comprehensive guide on FreeRTOS fundamentals, covering key concepts such as tasks, scheduler, tick, and blocking.
- Added a project setup guide for FreeRTOS on the EK-TM4C1294XL, including prerequisites, library structure, and step-by-step instructions for creating a CCS project.
- Included example code for a simple FreeRTOS application with two LED blinking tasks.

--- a/src/content/docs/labs/lab2.mdx
+++ b/src/content/docs/labs/lab2.mdx
@@ -1,10 +1,11 @@
 ---
-title: "Lab 2 — Spectrum Analizer"
-description: "Implement a real-time FFT audio analyzer and visualize frequency bands on the LCD."
+title: "Lab 2 — FreeRTOS Basics"
+description: "Learn the basics of FreeRTOS by creating simple multitasking applications on the TM4C1294XL LaunchPad."
 links:
   - "/labs/lab1/"
   - "/guides/setupguide/"
   - "/guides/labtimeline/"
+  - "/guides/freertos/"
 ---
 import { Picture } from 'astro:assets';
 import { Aside } from '@astrojs/starlight/components';
@@ -29,9 +30,9 @@ import { Card, CardGrid, LinkCard } from '@astrojs/starlight/components';
   icon="right-arrow"
 />
    <LinkCard
-      title="Workspace Setup"
-      description="If you’re using a lab computer, you must reconfigure Code Composer Studio each session."
-      href="/guides/setupguide/"
+      title="FreeRTOS Guide"
+      description="Learn the basics of FreeRTOS in our comprehensive guide."
+      href="/guides/freertos/"
       icon="cpu"
    />
    <LinkCard
